# seki

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml
docs/: builtins.md  internals.md  proofs.md
docs/spec/: 01-lexical.md  02-grammar.md  03-semantics.md  04-type-system.md  05-tactics.md  06-soundness.md  07-stdlib.md  08-rust-seki-split.md  09-testing.md  10-builtin-metadata.md  README.md
examples/: 01_basic.seki  03_lambda.seki  05_number_theory.seki  06_boolean_algebra.seki  08_set_identities.seki  09_algorithms.seki  13_advanced_tactics.seki  14_types_and_real.seki  18_data_match.seki  20_dependent_types.seki  22_group_theory.seki  24_rings_fields.seki  27_cas_advanced.seki  29_analysis.seki  35_call_syntax.seki  36_for_loops.seki  37_python_for.seki  helpers_mod.seki
lib/algebra/: complex.seki  matrix.seki  structures.seki  vector.seki
lib/analysis/: diff.seki  gronwall.seki  limit.seki  multidiff.seki  taylor.seki
lib/cas/: calc.seki  multipoly.seki  rational.seki  solve.seki  sym.seki
lib/numeric/: eigen.seki  linalg.seki  matrix_eq.seki
lib/numth/: gcd.seki  primes.seki
lib/probability/: continuous.seki  discrete.seki  montecarlo.seki
lib/test/: runner.seki
sample/: README.md  run_tests.sh
sample/calc/: README.md  lib.seki  main.seki  tests.seki  (+1 more)
scripts/: release.sh
src/: algebra.rs  ast.rs  builtin_meta.rs  bytecode.rs  eval.rs  lexer.rs  lib.rs  linarith.rs  lsp_main.rs  main.rs  parser.rs  prover.rs  stdlib.seki  termination.rs  typecheck.rs  value.rs
tests/: integration.rs  property_tests.rs
(+46 files in other folders)
